--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 32vh;
+            height: 23vh;
+        }
+        .container2 {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 20vh;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: medium;
+            color: #424040;
         }
 
         /* style the div containers */
@@ -70,7 +79,18 @@
             <div class="circle2" id="circle5"></div>
         </div>
     </div>
+    <div class="container2">
+        HARMONIOUS BRIDGE COLORS
+        <br>
+        <br>
+        1 Pick a color from each color picker.
+        <br>
+        2 Overlap circles: on a desktop, shrink the browser window, on a mobile phone, turn sideways.
+        <br>
+        3 Take a screenshot and eyedrop using design software.
+    </div>
 </div>
+
     <script>
         // get the color picker elements
         const colorPicker1 = document.querySelector('#color-picker1');
